--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 actix-rt = "2.8.0"
 actix-web = "4.3.1"
+dotenv = "0.15.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.68"
+diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
+r2d2 = "0.8.9"
